@@ -1,3 +1,7 @@
+Mon Mar 25 17:19:46 EET 2002  Pekka Riikonen <priikone@silcnet.org>
+
+	* Merged bugfixes for Irssi SILC client from irssi.org CVS.
+
 Sun Mar 24 11:21:04 EET 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* Added `type' argument to silc_id_payload_parse_id function which
